--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-backend-strapi/
-frontend-next/
 node_modules/
 .env
 .env.local
+.env.production
+.env.staging
+.DS_Store
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
