fix: build issues 10.11

--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -22,5 +22,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
